<resources>
    <string name="app_name">Turanth Suvidha Staff</string>

    <string name="scr_lbl_enter_lp_no">Enter your LR number</string>
    <string name="scr_lbl_please_enter_your_username_and_password">Please enter your \nUsername and password</string>
    <string name="scr_lbl_username">Username</string>
    <string name="scr_lbl_password">Password</string>
    <string name="scr_lbl_truck_details"><u>Truck Documents</u></string>
    <string name="scr_lbl_cleaner_details"><u>Cleaner Details</u></string>
    <string name="scr_lbl_Driver_details">ड्राइवर डिटेल्स</string>
    <string name="scr_lbl_cleaner_batta">क्लीनर भत्ता</string>
    <string name="scr_lbl_cleaner_bhatta">ड्राइवर भत्ता ( टोटल दिन : 03 )</string>
    <string name="scr_lbl_cleaner_bhatta_new">ड्राइवर भत्ता ( टोटल दिन : 03 )</string>
    <string name="scr_lbl_trip_kharcha">ट्रिप खर्चा</string>
    <string name="scr_lbl_okay">OKAY</string>
    <string name="scr_lbl_not_okay">NOT OKAY</string>
    <string name="scr_lbl_sorry_no_contacts_available">Sorry, No Data Available!</string>
    <string name="err_msg_connection_was_refused">Please check your internet connection or try again later</string>
    <string name="scr_lbl_add_kharcha">खर्चा ऐड करे</string>
    <string name="scr_lbl_total_hisab">टोटल हिसाब</string>
    <string name="scr_message_please_wait">Please wait..</string>

    <string name="scr_lbl_no_data_available">No Data Available.</string>
    <string name="scr_lbl_upload_pod">Upload POD</string>

    <string name="scr_lbl_data_loading">Please wait, data is loading.....</string>
    <string name="scr_lbl_no_pending">No Pending Record</string>
    <string name="scr_lbl_lr_date">LR Date</string>

    <string name="scr_lbl_add_pod">Add POD</string>
    <string name="scr_lbl_plant">Plant</string>
    <string name="scr_lbl_no_of_lr">No Of LR</string>
    <string name="scr_lbl_add_new_lr">Add New LR</string>
    <string name="scr_lbl_lr_no">LR No.</string>
    <string name="scr_lbl_lr_details">LR Details</string>

    <string name="scr_lbl_capture">Capture</string>
    <string name="scr_lbl_re_capture">Re-Capture</string>
    <string name="scr_lbl_re_upload">Re-Upload</string>

    <string name="scr_lbl_upload">UPLOAD</string>
    <string name="scr_lbl_save">SAVE</string>
    <string name="scr_lbl_total_kharcha">टोटल खर्चा</string>
    <string name="scr_lbl_kharcha_add_kijiye">खर्चा ऐड कीजिए</string>
    <string name="scr_lbl_kitna_kharcha">कितना खर्चा</string>
    <string name="msg_kharcha_saved">Kharcha Saved Successfully!</string>
    <string name="msg_kharcha_uploaded">Kharcha Uploaded Successfully!</string>
    <string name="scr_lbl_pending_hisab">पेंडिंग हिसाब :</string>
    <string name="scr_lbl_gadi_no">गाड़ी नं.</string>
    <string name="scr_lbl_awadhi">अवधि</string>
    <string name="scr_lbl_trip">ट्रिप</string>
    <string name="scr_lbl_pass_hisab">Pass Hisab</string>
    <string name="scr_title_purana_hisab">पुराना हिसाब</string>
    <string name="scr_lbl_cleaner_name">क्लीनर : </string>
    <string name="scr_lbl_aur_janiye">और जानिए</string>
    <string name="scr_lbl_complaint">COMPLAIN</string>
    <string name="scr_lbl_check_issue">Check Issue</string>
    <string name="scr_lbl_toll_kharcha">टोल खर्चा</string>
    <string name="scr_lbl_submit">SUBMIT</string>
    <string name="scr_lbl_start_recording">Start Recording</string>
    <string name="scr_lbl_description">डिस्क्रिप्शन</string>
    <string name="msg_issue_submitted">Issue Submitted Successfully!</string>
    <string name="scr_lbl_raise_issue">Raise Issue</string>
    <string name="scr_lbl_issue_recording">Issue Recording</string>
    <string name="scr_lbl_cancel">CANCEL</string>
    <string name="scr_lbl_eway_bill">इ-वे बिल</string>
    <string name="scr_lbl_details">Details</string>

    <string name="val_msg_please_enter_email">Please enter username.</string>
    <string name="val_msg_please_enter_password">Please Enter Password.</string>
    <string name="val_msg_minimum_password">Required password is between 6 to 12 characters</string>
    <string name="scr_lbl_general_manager">General Manager</string>
    <string name="scr_lbl_call_manager">कॉल मॅनेजर</string>
    <string name="scr_lbl_dept_manager">Dept. Manager     </string>
    <string name="scr_lbl_asst_manager">Asst. Manager         </string>
    <string name="scr_lbl_all_contacts">All Contacts</string>
    <string name="scr_lbl_branch_contacts">ब्रांच कॉन्टेक्ट्स</string>
    <string name="scr_lbl_call">Call</string>
    <string name="scr_lbl_driver_hisab">Driver Hisab</string>
    <string name="scr_lbl_passed_hisab">Passed Hisab</string>
    <string name="scr_title_complaints">कम्प्लेंट्स</string>
    <string name="scr_title_notifications">नोटिफिकेशन्स</string>
    <string name="scr_lbl_hisab_upload">Hisab Upload</string>
    <string name="scr_lbl_trip_kharcha_alert">ट्रिप खर्चा अलर्ट</string>
    <string name="scr_lbl_advance_prapt">एडवांस प्राप्त हुआ</string>
    <string name="scr_lbl_branch_nam">ब्रांच नाम</string>
    <string name="scr_lbl_staff_nam">स्टाफ नाम</string>
    <string name="scr_lbl_truck_details_hindi">ट्रक डिटेल्स</string>
    <string name="scr_lbl_puc">पि - यु - सी सर्टिफिकेट</string>
    <string name="scr_lbl_issurance_cert">इन्शुरन्स सर्टिफिकेट</string>
    <string name="scr_lbl_contacts">कॉन्ट्रैक्ट</string>
    <string name="scr_lbl_cleaner_details_marathi">क्लीनर डिटेल्स</string>
    <string name="msg_weight_submitted">Weight Submitted Successfully!</string>
    <string name="scr_lbl_find_in_maps">Find In Maps</string>
    <string name="scr_lbl_kata_chitthi_weight">कांटा चिट्ठी वजन</string>
    <string name="scr_lbl_unresolved">Unresolved</string>
    <string name="scr_lbl_stop_recording">Recording Completed</string>
    <string name="scr_lbl_advance_assign">Advance Assigned</string>
    <string name="ram_singh"><u>Ram Singh</u></string>
    <string name="ravi_sharma"><u>Ravi Sharma</u></string>
    <string name="scr_lbl_advance_assigned">Advance Assigned</string>
    <string name="scr_lbl_advance_assigned_to">Advance Assigned To</string>
    <string name="src_lbl_otp_received">OTP Received</string>
    <string name="scr_lbl_assigned_advance">Assigned Advance</string>
    <string name="scr_lbl_pay_advance">Pay Advance</string>
    <string name="scr_lbl_enter_vehicle_number">Enter Veh. No. or Driver Name</string>
    <string name="scr_lbl_driver_name">Driver Name</string>
    <string name="hint_enter_driver_name">Enter Driver Name</string>
    <string name="scr_lbl_cleaner_name_eng">Cleaner Name</string>
    <string name="hint_enter_cleaner_name">Enter Cleaner Name</string>
    <string name="scr_lbl_amount">Amount</string>
    <string name="hint_enter_amount">Enter Amount</string>
    <string name="scr_lbl_remark">Remark</string>
    <string name="hint_enter_remark">Enter Remark</string>
    <string name="scr_lbl_date">Date</string>
    <string name="scr_lbl_driver">Driver</string>
    <string name="scr_lbl_cleaner">Cleaner</string>
    <string name="btn_send_otp">send otp</string>
    <string name="msg_advance_paid_success">Advance Paid Successfully !</string>
    <string name="msg_otp_you_have_entered">OTP you have enterd is incorrect.</string>
    <string name="msg_otp_has_successfully">OTP has successfully sent on driver\'s mobile.</string>
    <string name="scr_lbl_vehicle_no">Vehicle No</string>
    <string name="scr_lbl_no_driver">No Driver</string>
    <string name="scr_lbl_advance_to_driver">Advance to Driver</string>
    <string name="scr_lbl_loading_list">Loading List</string>
    <string name="msg_office_location_emp">Stay in the office while you get your current location checked.</string>
    <string name="msg_current_location_emp">The app will continuously check your location to make sure you\'re where you need to be.</string>
    <string name="msg_location_change_in_attendance">Please mark your attendance from your office location only.</string>
    <string name="scr_lbl_unavailable">Unavailable</string>
    <string name="scr_lbl_attendance_details">Attendance Details</string>
    <string name="scr_lbl_status">Status</string>
    <string name="src_lbl_in_time">In time : </string>
    <string name="scr_lbl_out_time">Out time : </string>
    <string name="scr_lbl_you_absent">You were Absent.</string>
    <string name="plese_contact_ur_admin">Configurations failure, Please contact your admin!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <string-array name="button_list">
        <item>Kanta Chithi</item>
        <item>Advance to Driver</item>
        <item>Loading List</item>
        <item>Attendance List</item>
        <item>PDS Pending POD</item>
        <item>GDS Pending POD</item>
    </string-array>



</resources>