<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_300dp"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/_10dp"
    android:paddingTop="@dimen/_12dp"
    android:paddingHorizontal="@dimen/_12dp"
    android:gravity="center"
    android:background="@drawable/shape_round_dialog"
    android:layout_marginTop="@dimen/_10dp"
    android:layout_marginHorizontal="@dimen/_10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:fontFamily="@font/gilroy_bold"
            android:gravity="left"
            android:visibility="invisible"
            android:text="@string/scr_lbl_kharcha_add_kijiye"
            android:textColor="@color/color_main"
            android:textSize="@dimen/_16sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgCancel"
            android:layout_width="@dimen/_16dp"
            android:layout_height="@dimen/_16dp"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_close" />

    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10dp"
        android:padding="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/shape_round_grey_round_dialog"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDriverBhatta"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/font_regular"
                    android:text="Veh. No."
                    android:textColor="@color/back_text_colour"
                    android:textSize="@dimen/_14sp"
                    android:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDriverBhattaColon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_regular"
                    android:text=" :  "
                    android:visibility="visible"
                    android:layout_toRightOf="@+id/tvDriverBhatta"
                    android:textColor="@color/back_text_colour"
                    android:textSize="@dimen/_14sp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDriverBhattaValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvDriverBhattaColon"
                    android:fontFamily="@font/gilroy_semibold"
                    android:text="MH 03 CV 5243"
                    android:textColor="@color/back_text_colour"
                    android:textSize="@dimen/_14sp" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAwadhi"
                    android:layout_width="@dimen/_55dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/font_regular"
                    android:text="@string/scr_lbl_date"
                    android:textColor="@color/back_text_colour"
                    android:textSize="@dimen/_14sp"
                    android:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAwadhiColon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_regular"
                    android:text=" :  "
                    android:visibility="visible"
                    android:layout_toRightOf="@+id/tvAwadhi"
                    android:textColor="@color/back_text_colour"
                    android:textSize="@dimen/_14sp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAwadhiValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvAwadhiColon"
                    android:fontFamily="@font/gilroy_semibold"
                    android:text="05/09/2021"
                    android:textColor="@color/back_text_colour"
                    android:textSize="@dimen/_14sp" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTrip"
                    android:layout_width="@dimen/_55dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/font_regular"
                    android:text="@string/scr_lbl_driver"
                    android:textColor="@color/back_text_colour"
                    android:textSize="@dimen/_14sp"
                    android:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTripColon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_regular"
                    android:text=" :  "
                    android:visibility="visible"
                    android:layout_toRightOf="@+id/tvTrip"
                    android:textColor="@color/back_text_colour"
                    android:textSize="@dimen/_14sp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTripValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvTripColon"
                    android:fontFamily="@font/gilroy_semibold"
                    android:text="Ram Singh"
                    android:textColor="@color/back_text_colour"
                    android:textSize="@dimen/_14sp" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCleaner"
                    android:layout_width="@dimen/_55dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/font_regular"
                    android:text="@string/scr_lbl_cleaner"
                    android:textColor="@color/back_text_colour"
                    android:textSize="@dimen/_14sp"
                    android:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCleanerColon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_regular"
                    android:text=" :  "
                    android:visibility="visible"
                    android:layout_toRightOf="@+id/tvCleaner"
                    android:textColor="@color/back_text_colour"
                    android:textSize="@dimen/_14sp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCleanerValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvCleanerColon"
                    android:fontFamily="@font/gilroy_semibold"
                    android:text="Ravi Sharma"
                    android:textColor="@color/back_text_colour"
                    android:textSize="@dimen/_14sp" />

            </RelativeLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHideStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/scr_lbl_amount"
                android:layout_marginBottom="@dimen/_3dp"
                android:textColor="@color/back_text_colour"
                android:layout_gravity="center"
                android:textSize="@dimen/_14sp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/font_semibold"
                android:text="₹1500/-"
                android:layout_marginBottom="@dimen/_6dp"
                android:layout_gravity="center"
                android:textColor="@color/green"
                android:textSize="@dimen/_16sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/okayButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_button_round_corner_5"
            android:fontFamily="@font/gilroy_semibold"
            android:gravity="center"
            android:paddingTop="@dimen/_2dp"
            android:text="@string/btn_send_otp"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp" />

    </LinearLayout>



</LinearLayout>