<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="310dp"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/_12dp"
    android:paddingTop="@dimen/_12dp"
    android:paddingHorizontal="@dimen/_12dp"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@drawable/shape_round_dialog"
    android:layout_marginTop="@dimen/_10dp"
    android:layout_marginHorizontal="@dimen/_10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:fontFamily="@font/gilroy_bold"
            android:gravity="left"
            android:text="@string/scr_lbl_advance_to_driver"
            android:textColor="@color/color_main"
            android:textSize="@dimen/_16sp" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgCancel"
            android:layout_width="@dimen/_16dp"
            android:layout_height="@dimen/_16dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_close" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layHeaderToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/_8dp"
            android:background="@drawable/shape_round_no_bottom_dialog"
            android:orientation="horizontal"
            >


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:layout_weight="1"
                android:paddingLeft="@dimen/_3dp"
                android:fontFamily="@font/gilroy_semibold"
                android:paddingTop="@dimen/_5dp"
                android:text="Date"
                android:inputType="textMultiLine"
                android:textColor="@color/back_text_colour"
                android:textSize="@dimen/_12sp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvVehicleNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/_3dp"
                android:fontFamily="@font/gilroy_semibold"
                android:gravity="center"
                android:paddingTop="@dimen/_5dp"
                android:text="Veh No"
                android:inputType="textMultiLine"
                android:layout_weight="1"
                android:textColor="@color/back_text_colour"
                android:textSize="@dimen/_12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDriver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:layout_marginLeft="@dimen/_3dp"
                android:inputType="textMultiLine"
                android:layout_weight="1"
                android:fontFamily="@font/gilroy_semibold"
                android:paddingTop="@dimen/_5dp"
                android:text="Driver"
                android:textColor="@color/back_text_colour"
                android:textSize="@dimen/_12sp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/_3dp"
                android:fontFamily="@font/gilroy_semibold"
                android:gravity="center"
                android:paddingRight="@dimen/_3dp"
                android:paddingTop="@dimen/_5dp"
                android:text="Amt"
                android:inputType="textMultiLine"
                android:layout_weight="1"
                android:textColor="@color/back_text_colour"
                android:textSize="@dimen/_12sp" />



        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTripAwadhi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:nestedScrollingEnabled="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_advance_to_driver" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layTotal"
        android:layout_marginTop="@dimen/_10dp"
        android:visibility="visible"
        android:paddingHorizontal="@dimen/_7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:fontFamily="@font/gilroy_semibold"
            android:gravity="left|center"
            android:text="Total"
            android:layout_weight="1"
            android:textColor="@color/color_main"
            android:textSize="@dimen/_14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_marginLeft="@dimen/_3dp"
            android:layout_weight="1"
            android:fontFamily="@font/gilroy_semibold"
            android:gravity="right|center"
            android:text=""
            android:textColor="@color/color_main"
            android:textSize="@dimen/_14sp" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNoData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:fontFamily="@font/gilroy_semibold"
        android:gravity="left"
        android:layout_marginVertical="@dimen/_16dp"
        android:background="@drawable/shape_round_grey_round_dialog"
        android:paddingVertical="@dimen/_10dp"
        android:paddingHorizontal="@dimen/_28dp"
        android:text="@string/scr_lbl_sorry_no_contacts_available"
        android:textColor="@color/back_text_colour"
        android:textSize="@dimen/_14sp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/detailsButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:layout_weight="1"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@drawable/bg_button_round_corner_5"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:paddingTop="@dimen/_3dp"
        android:text="@string/scr_lbl_all_contacts"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sp" />

</LinearLayout>